test/libsolidity/smtCheckerTests/operators/fixed_point_add.sol
pragma experimental SMTChecker;
contract test {
	function f() internal pure {
		ufixed a = uint64(1) + ufixed(2);
	}
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
